Fixed the footer spacing and page wrapping

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,35 +3,37 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: auto 10px;
-  height: 100px;
-}
-
-#footer-back {
-    background: transparent !important;
+  margin: 10px 20px;
+  height: 50px;
+  background-color: transparent !important;
 }
 
 .footlinks {
   color: black;
   margin: 5px;
+  &:hover {
+    color: #f15a23;
+  }
 }
 
-.footlinks:hover {
-  color: #f15a23;
+* {
+  margin: 0;
 }
-
 html, body {
   height: 100%;
 }
 .page-wrap {
   min-height: 100%;
   /* equal to footer height */
-  margin-bottom: -100px;
+  margin-bottom: -50px;
 }
 .page-wrap:after {
   content: "";
   display: block;
 }
 .site-footer, .page-wrap:after {
-  height: 100px;
+  height: 50px;
+}
+.site-footer {
+  background: orange;
 }
